@@ -1,3 +1,7 @@
+2011-07-02  Ian Lance Taylor  <iant@google.com>
+
+	* dirsearch.cc (Dir_cache::read_files): Ignore ENOTDIR errors.
+
 2011-07-01  Ian Lance Taylor  <iant@google.com>
 
 	PR gold/12525
